overflow fix

--- a/css.css
+++ b/css.css
@@ -51,7 +51,7 @@ text-align: center;
 }
 .leaflet-popup-content{
 	width: 400px;
-	overflow-y: scroll;
+	overflow-y: auto;
 	max-height: 80vh;
 }
 
